docs/v0.3.0a3/_sources/reference/_autosummary/hpcflow.sdk.submission.jobscript.Jobscript.rst.txt
hpcflow.sdk.submission.jobscript.Jobscript
==========================================

.. currentmodule:: hpcflow.sdk.submission.jobscript

.. autoclass:: Jobscript
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~Jobscript.compose_combined_script
      ~Jobscript.compose_jobscript
      ~Jobscript.from_json_like
      ~Jobscript.get_active_states
      ~Jobscript.get_app_std_path
      ~Jobscript.get_commands_file_name
      ~Jobscript.get_std_out_err_path
      ~Jobscript.get_stderr
      ~Jobscript.get_stderr_path
      ~Jobscript.get_stdout
      ~Jobscript.get_stdout_path
      ~Jobscript.print_stderr
      ~Jobscript.print_stdout
      ~Jobscript.submit
      ~Jobscript.to_dict
      ~Jobscript.to_json_like
      ~Jobscript.write_jobscript
      ~Jobscript.write_script_indices_file
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Jobscript.EAR_ID_file_name
      ~Jobscript.EAR_ID_file_path
      ~Jobscript.all_EAR_IDs
      ~Jobscript.all_EARs
      ~Jobscript.at_submit_metadata
      ~Jobscript.blocks
      ~Jobscript.combined_script_indices_file_name
      ~Jobscript.combined_script_indices_file_path
      ~Jobscript.dependencies
      ~Jobscript.direct_std_out_err_path
      ~Jobscript.direct_stderr_path
      ~Jobscript.direct_stdout_path
      ~Jobscript.direct_win_pid_file_name
      ~Jobscript.direct_win_pid_file_path
      ~Jobscript.end_time
      ~Jobscript.index
      ~Jobscript.is_array
      ~Jobscript.is_scheduled
      ~Jobscript.is_submitted
      ~Jobscript.jobscript_functions_name
      ~Jobscript.jobscript_functions_path
      ~Jobscript.jobscript_name
      ~Jobscript.jobscript_path
      ~Jobscript.os_name
      ~Jobscript.process_ID
      ~Jobscript.resources
      ~Jobscript.scheduler
      ~Jobscript.scheduler_job_ID
      ~Jobscript.scheduler_js_ref
      ~Jobscript.scheduler_name
      ~Jobscript.shell
      ~Jobscript.shell_idx
      ~Jobscript.shell_name
      ~Jobscript.start_time
      ~Jobscript.std_path
      ~Jobscript.submission
      ~Jobscript.submit_cmdline
      ~Jobscript.submit_hostname
      ~Jobscript.submit_machine
      ~Jobscript.submit_time
      ~Jobscript.version_info
      ~Jobscript.workflow
      ~Jobscript.workflow_app_alias
   
   